# Chat

./: .gitignore  .gitignore.swp  Chat uml class diagram.mdj  scriptBuild
ChatClient/: CMakeLists.txt  ChatClient.pro  Client.cpp  Client.hpp  MailTypes.hpp  client.cpp  client.hpp  main.cpp
ChatClient/Client/: CMakeLists.txt  Client.cpp  Client.hpp
ChatServer/: CMakeLists.txt  ChatServer.pro  ClientTypes.hpp  DataBase.cpp  DataBase.hpp  EventHandler.cpp  EventHandler.hpp  MailTypes.hpp  Manager.cpp  Manager.cpp.autosave  Manager.hpp  Server.cpp  Server.hpp  Tools.hpp  main.cpp
ChatServer/CWrapMail/: CMakeLists.txt  CWrapMail.cpp  CWrapMail.hpp
ChatServer/DataBase/: CMakeLists.txt
ChatServer/EventHandler/: CMakeLists.txt  EventHandler.cpp  EventHandler.hpp
ChatServer/Listener/: IManagerListener.hpp
ChatServer/Manager/: CMakeLists.txt  Manager.cpp  Manager.hpp
ChatServer/Server/: CMakeLists.txt  Server.cpp
ChatServer/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  test
build-chat-Desktop_Qt_5_11_1_GCC_64bit-Debug/: Makefile  chat
build-chatClient-Desktop_Qt_5_11_1_GCC_64bit-Debug/: Makefile  chatClient
chat/: chat.pro  chat.pro.user.9c749e0  chat.pro.user.d827695  client.h  eventhandler.cpp  eventhandler.hpp  mail.hpp  main.cpp  manager.cpp  manager.hpp  server.cpp  server.hpp
chatClient/: chatClient.pro.user.9c749e0  client.cpp  client.hpp
